# medscan-intellibus

./: .gitignore  Agents.md  DEPLOY.md  README.md  chest.py  downloadscript copy.py  ideas.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  server.py
apps/web/: env.ts  next.config.ts  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
apps/web/app/: layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/create-account/: page.tsx
apps/web/app/dashboard/: dashboard-client.tsx  dashboard-context.tsx  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: dashboard-sidebar.tsx  image-with-labels.tsx
apps/web/components/chat/: chat-message.tsx  types.ts
apps/web/components/providers/: trpc-provider.tsx
apps/web/components/ui/: button.tsx  card.tsx  checkbox.tsx  form.tsx  input.tsx
apps/web/lib/: auth-client.ts  auth.ts
apps/web/lib/chat/: analyze-ct.ts  generate-chat-metadata.ts  transformers.ts
apps/web/lib/trpc/: client.ts
apps/web/server/trpc/: context.ts  (+1 more)
database/: README.md  schema_diagram.md
database/migrations/: 001_initial_schema.sql
database/schemas/: medscan_schema.sql
database/seeds/: sample_data.sql
docs/: index.md
vision/: DEPLOYMENT.md  Dockerfile  README.md  fly.toml  pyproject.toml
vision/scripts/: __init__.py  chest.py  download_samples.py
vision/src/vision/: __init__.py  api.py  inference.py
vision/src/vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vision/src/vision/data/: __init__.py  download.py
(+6 files in other folders)
